docs(neotest): document test capture and running tests; verify D2
Fill the onboarding gaps a colleague hit when trying to run tests from
Neovim, and record the D2 verification.

README:
- New "Test Capture" section: lathe-junit is a committed test-scoped
  dependency whose JUnit Platform LauncherSessionListener runs inside
  Surefire's fork and writes .lathe/<module>/test-launch.json (java.home,
  fork classpath minus its own jar, module path + directives, argLine
  JVM args) from live JVM introspection -- the effective interpreted
  launch the server replays against. Documents the config (test-scope
  dep in the parent POM, no surefire <configuration> needed via SPI
  self-registration) and the limits (JPMS-capable Surefire e.g. 3.5.5+,
  JUnit Platform only, systemPropertyVariables not yet captured, no
  capture until a build actually forks tests).
- New "Running Tests" subsection under the neotest section: a starter
  keymap set and, crucially, that console output is Lathe's docked
  window via require("lathe.neotest").open_output() (bound to <leader>to)
  -- not neotest's floating output, which shows raw text without the
  <CR>/gF stack-frame source navigation.
- Prerequisite callout linking the runner to Test Capture (discovery
  works without it; a run has nothing to replay until capture has run).
- Agent Installation Prompt extended from two pieces to three, adding
  the lathe-junit test dependency (and noting it may live in a different
  POM than the reactor root).

Docs:
- lathe-neotest-experience: flip D1 (cold-open discovery) and D2
  (discovery stays current) to done with as-built notes. D2 is satisfied
  by construction -- neotest re-discovers on BufWritePost and our
  discover_positions is a live lathe.runnables.list query, so every
  re-discovery reflects server truth.
- lathe-run-test-debug: correct the artifact table -- the lathe-junit
  test dependency is committed by hand; lathe:init does not inject it
  (confirmed: no Mojo references lathe-junit)